Fixed image radius issue in messages cells for Owner/User

--- a/Boatell-v3/Boatell-v3/Base.lproj/Main.storyboard
+++ b/Boatell-v3/Boatell-v3/Base.lproj/Main.storyboard
@@ -687,13 +687,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Service Description:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qUg-ix-58d">
-                                <rect key="frame" x="20" y="265" width="148" height="21"/>
+                                <rect key="frame" x="20" y="210" width="148" height="21"/>
                                 <fontDescription key="fontDescription" type="system" weight="thin" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VJ8-65-1dU">
-                                <rect key="frame" x="87" y="417" width="240" height="223"/>
+                                <rect key="frame" x="87" y="411" width="240" height="223"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="VJ8-65-1dU" secondAttribute="height" multiplier="240:223" id="Dgn-nx-iyc"/>
                                 </constraints>
@@ -705,9 +705,9 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="E2a-o4-lwf">
-                                <rect key="frame" x="20" y="294" width="374" height="93"/>
+                                <rect key="frame" x="20" y="239" width="374" height="151"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="E2a-o4-lwf" secondAttribute="height" multiplier="374:93" id="NBN-fe-zId"/>
+                                    <constraint firstAttribute="width" secondItem="E2a-o4-lwf" secondAttribute="height" multiplier="374:151" id="kPf-kH-2sG"/>
                                 </constraints>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -726,13 +726,12 @@
                             <constraint firstItem="Rml-iu-HAp" firstAttribute="top" secondItem="0dO-do-NTq" secondAttribute="top" constant="80" id="8Gg-mC-na9"/>
                             <constraint firstItem="bUh-Ac-DiB" firstAttribute="top" secondItem="Rml-iu-HAp" secondAttribute="bottom" constant="18" id="8yv-kK-Rb2"/>
                             <constraint firstItem="E2a-o4-lwf" firstAttribute="leading" secondItem="0dO-do-NTq" secondAttribute="leading" constant="20" id="BYG-tJ-bRc"/>
-                            <constraint firstItem="VJ8-65-1dU" firstAttribute="top" secondItem="qUg-ix-58d" secondAttribute="bottom" constant="131" id="BbX-P7-93Q"/>
+                            <constraint firstItem="VJ8-65-1dU" firstAttribute="top" secondItem="qUg-ix-58d" secondAttribute="bottom" constant="180" id="BbX-P7-93Q"/>
                             <constraint firstItem="ZLe-tL-wOQ" firstAttribute="leading" secondItem="0dO-do-NTq" secondAttribute="leading" constant="125" id="G3t-S0-SGE"/>
                             <constraint firstItem="E2a-o4-lwf" firstAttribute="top" secondItem="qUg-ix-58d" secondAttribute="bottom" constant="8" id="TOp-WC-TWi"/>
                             <constraint firstItem="0dO-do-NTq" firstAttribute="trailing" secondItem="wMf-gG-zDZ" secondAttribute="trailing" constant="20" id="Vhu-W5-qAb"/>
-                            <constraint firstItem="qUg-ix-58d" firstAttribute="top" secondItem="bUh-Ac-DiB" secondAttribute="bottom" constant="95" id="Yhj-Ut-sy8"/>
+                            <constraint firstItem="qUg-ix-58d" firstAttribute="top" secondItem="bUh-Ac-DiB" secondAttribute="bottom" constant="40" id="Yhj-Ut-sy8"/>
                             <constraint firstItem="ZLe-tL-wOQ" firstAttribute="width" secondItem="ZLe-tL-wOQ" secondAttribute="height" multiplier="164:63" id="at4-dt-tbx"/>
-                            <constraint firstItem="E2a-o4-lwf" firstAttribute="width" secondItem="E2a-o4-lwf" secondAttribute="height" multiplier="374:93" id="cRq-Vk-Mdt"/>
                             <constraint firstItem="0dO-do-NTq" firstAttribute="trailing" secondItem="E2a-o4-lwf" secondAttribute="trailing" constant="20" id="ckv-r8-c65"/>
                             <constraint firstItem="ZLe-tL-wOQ" firstAttribute="width" secondItem="ZLe-tL-wOQ" secondAttribute="height" multiplier="164:63" id="d0f-lx-k6m"/>
                             <constraint firstItem="Rml-iu-HAp" firstAttribute="leading" secondItem="0dO-do-NTq" secondAttribute="leading" constant="20" id="dL5-iR-fNh"/>
@@ -2671,13 +2670,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Service Description:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H7f-AA-2rB">
-                                <rect key="frame" x="20" y="265" width="148" height="21"/>
+                                <rect key="frame" x="20" y="210" width="148" height="21"/>
                                 <fontDescription key="fontDescription" type="system" weight="thin" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dTT-Qb-heD">
-                                <rect key="frame" x="87" y="417" width="240" height="223"/>
+                                <rect key="frame" x="87" y="411" width="240" height="223"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="dTT-Qb-heD" secondAttribute="height" multiplier="240:223" id="TF8-xP-bFE"/>
                                 </constraints>
@@ -2704,9 +2703,9 @@
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="5zg-Pf-rPi">
-                                <rect key="frame" x="20" y="294" width="374" height="93"/>
+                                <rect key="frame" x="20" y="239" width="374" height="135"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="5zg-Pf-rPi" secondAttribute="height" multiplier="374:93" id="Wnh-e3-7wK"/>
+                                    <constraint firstAttribute="width" secondItem="5zg-Pf-rPi" secondAttribute="height" multiplier="374:135" id="FYB-8q-Kj9"/>
                                 </constraints>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -2720,10 +2719,10 @@
                             <constraint firstItem="H7f-AA-2rB" firstAttribute="leading" secondItem="Obp-bg-loW" secondAttribute="leading" constant="20" id="5SJ-53-icF"/>
                             <constraint firstItem="4oK-2s-023" firstAttribute="top" secondItem="Obp-bg-loW" secondAttribute="top" constant="80" id="8UI-Hv-nks"/>
                             <constraint firstItem="6sg-ge-5hB" firstAttribute="width" secondItem="6sg-ge-5hB" secondAttribute="height" multiplier="164:63" id="AYq-RA-L6Y"/>
-                            <constraint firstItem="dTT-Qb-heD" firstAttribute="top" secondItem="H7f-AA-2rB" secondAttribute="bottom" constant="131" id="GaT-bt-8qf"/>
+                            <constraint firstItem="dTT-Qb-heD" firstAttribute="top" secondItem="H7f-AA-2rB" secondAttribute="bottom" constant="180" id="GaT-bt-8qf"/>
                             <constraint firstItem="Obp-bg-loW" firstAttribute="trailing" secondItem="5zg-Pf-rPi" secondAttribute="trailing" constant="20" id="Ihl-Xr-gxa"/>
                             <constraint firstItem="ie1-KJ-EBt" firstAttribute="top" secondItem="4oK-2s-023" secondAttribute="bottom" constant="18" id="PAt-fn-H1R"/>
-                            <constraint firstItem="H7f-AA-2rB" firstAttribute="top" secondItem="ie1-KJ-EBt" secondAttribute="bottom" constant="95" id="Qfv-n1-biH"/>
+                            <constraint firstItem="H7f-AA-2rB" firstAttribute="top" secondItem="ie1-KJ-EBt" secondAttribute="bottom" constant="40" id="Qfv-n1-biH"/>
                             <constraint firstItem="ie1-KJ-EBt" firstAttribute="leading" secondItem="Obp-bg-loW" secondAttribute="leading" constant="20" id="TYf-b3-sRY"/>
                             <constraint firstItem="Obp-bg-loW" firstAttribute="trailing" secondItem="6sg-ge-5hB" secondAttribute="trailing" constant="125" id="U69-Xh-1kf"/>
                             <constraint firstItem="4oK-2s-023" firstAttribute="leading" secondItem="Obp-bg-loW" secondAttribute="leading" constant="20" id="b8A-u8-frh"/>
@@ -2930,7 +2929,8 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="ucY-d9-ElJ"/>
+        <segue reference="Gsj-Dx-qxl"/>
+        <segue reference="Fug-eP-TlZ"/>
         <segue reference="qA5-S4-8KW"/>
         <segue reference="3NT-K1-ekO"/>
         <segue reference="3rb-88-5PJ"/>
